--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta http-equiv="content-type" content="text/html" />
 	<meta name="author" content="Windmill" />
 
-	<title>Неназванный 3</title>
+	<title>git</title>
 </head>
 
 <body>
 <h1>GIT</h1>
-<p>Изменение</p>
-dasdsad
+
+<p>new branch</p>
 </body>
 </html>
