--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 <body>
 <h1>GIT</h1>
-<<<<<<< HEAD
+<p>Изменение</p>
 
 <p>new branch</p>
-=======
-<p>Изменение</p>
+
+
 <p>branch master</p>
->>>>>>> master
+<p>branch master</p>
+<p>branch master</p>
 </body>
 </html>
